[gd_scene load_steps=6 format=2]

[ext_resource path="res://TacticalSpaceCombat/Ship/Unit.gd" type="Script" id=1]
[ext_resource path="res://TacticalSpaceCombat/assets.svg" type="Texture" id=2]


[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array(  )
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[sub_resource type="CircleShape2D" id=3]
radius = 24.0208

[node name="Unit" type="Path2D"]
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="."]
cubic_interp = false
loop = false

[node name="AreaUnit" type="Area2D" parent="PathFollow2D" groups=[
"unit",
]]

[node name="Sprite" type="Sprite" parent="PathFollow2D/AreaUnit"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 384, 24, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/AreaUnit"]
modulate = Color( 0.709804, 0, 1, 1 )
shape = SubResource( 2 )

[node name="AreaSelect" type="Area2D" parent="PathFollow2D"]
modulate = Color( 0.572549, 1, 0.545098, 1 )
collision_layer = 524288
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PathFollow2D/AreaSelect"]
shape = SubResource( 3 )
[connection signal="area_entered" from="PathFollow2D/AreaUnit" to="." method="_on_AreaUnit_area_entered"]
[connection signal="mouse_entered" from="PathFollow2D/AreaSelect" to="." method="_on_AreaSelect_mouse" binds= [ true ]]
[connection signal="mouse_exited" from="PathFollow2D/AreaSelect" to="." method="_on_AreaSelect_mouse" binds= [ false ]]
